# lab8

./: CMakeLists.txt
cmake_macros/: load_gtest.cmake
src/: CMakeLists.txt  main.cpp  measure_time.h  parallel_for.h  prefix_sum.h
test/: CMakeLists.txt  parallel_for_test.cpp  prefix_sum_test.cpp
